Backport of fix for bug 78836. Should be in KDE 3.3.3 if there is one.

BUG: 78836

svn path=/branches/KDE_3_3_BRANCH/kdenetwork/kopete/; revision=369091